--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~12.0.1",
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
+    "@ionic-native/date-picker": "^5.36.0",
     "@ionic/angular": "^5.5.2",
     "firebase": "^7.24.0",
     "rxjs": "~6.6.0",
